# rosx_introspection

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  conanfile.txt  package.xml
.github/workflows/: humble.yaml  jazzy.yaml  kilted.yaml  lyrical.yaml  rolling.yaml  ros2.yaml  ubuntu.yaml
include/rosx_introspection/: builtin_types.hpp  deserializer.hpp  flat_message_writer.hpp  idl_grammar.hpp  idl_parser.hpp  idl_types.hpp  json_message_writer.hpp  json_schema_writer.hpp  message_writer.hpp  msgpack_message_writer.hpp  msgpack_utils.hpp  ros_field.hpp  ros_message.hpp  ros_parser.hpp  ros_type.hpp  schema_writer.hpp  serializer.hpp  stringtree_leaf.hpp  tree.hpp  variant.hpp
include/rosx_introspection/contrib/: SmallVector.h  msgpack.hpp  nanocdr.hpp  span.hpp
include/rosx_introspection/details/: conversion_impl.hpp  exceptions.hpp
include/rosx_introspection/ros_utils/: ros1_helpers.hpp  ros2_helpers.hpp
python/: CMakeLists.txt  mcap_ros_parser.py  mcap_ros_parser_custom.py  rosx_introspection_py.cpp
src/: deserializer.cpp  flat_message_writer.cpp  idl_parser.cpp  json_message_writer.cpp  json_schema_writer.cpp  msgpack_message_writer.cpp  msgpack_utils.cpp  ros_field.cpp  ros_message.cpp  ros_parser.cpp  ros_type.cpp  serializer.cpp  stringtree_leaf.cpp
src/ros_utils/: message_definition_cache.cpp  message_definition_cache.hpp  ros2_helpers.cpp
test/: benchmark_idl.cpp  benchmark_mcap.cpp  test_encoding.cpp  test_idl.cpp  test_msgpack.cpp  test_parser.cpp  test_ros1.cpp  test_ros2.cpp
test/test_data/mcap/: ims_msgs__RoboticsInputs.cdr  ims_msgs__RoboticsInputs.expected  ims_msgs__RoboticsInputs.idl  manifest.txt
