<?xml version="1.0"?>
<package format="3">
  <name>rosx_introspection</name>
  <version>2.0.1</version>
  <description>Parse any ROS/ROS2 message without compile-time information</description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <license>MIT</license>

  <author email="davide.faconti@gmail.com">Davide Faconti</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp_serialization</depend>

  <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rosbag2_cpp</depend>

  <depend>rapidjson-dev</depend>

  <test_depend>sensor_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
       <build_type condition="$ROS_VERSION == 1">catkin</build_type>
       <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
   </export>
</package>
